edit Risks endpoints
